--- a/Car.html
+++ b/Car.html
@@ -29,99 +29,291 @@
     </section>
 
     <section id="page-hero">
-        <h4>กำลังมองหารถเช่าอยู่ใช่ไหม</h4>
-        <h2>เลือกรถที</h2>
+        <h4>เรื่องรถไว้ใจ</h4>
+        <h2>รถเช่ามหาชัย</h2>
     </section>
 
     <section id="product1" class="section-p1">
-        <h2>Hit cars</h2>
-        <!--<div class="slide-container swiper">
-            <div class="slide-content">
-                <div class="card-wrapper swiper-wrapper">
-                    <div class="card swiper-slide">
-                        <div class="image-content">
-                            <span class="overlay"></span>
-                            <div class="card-image">
-                                <img src="images/profile4.jpg" alt="" class="card-img">
+        <h2>รถเช่า</h2>
+        <div class="container">
+            <section class="grid_cards">
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
                             </div>
                         </div>
-                        <div class="card-content">
-                            <h2 class="name">1</h2>
-                            <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="button">View More</button>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="image-content">
-                            <span class="overlay"></span>
-                            <div class="card-image">
-                                <img src="images/profile5.jpg" alt="" class="card-img">
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="https://fontawesome.com/icons/person?f=classic&s=solid" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="https://fontawesome.com/icons/person?f=classic&s=solid" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Innova</h2>
+                                </a>
+                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
-                        <div class="card-content">
-                            <h2 class="name">2</h2>
-                            <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="button">View More</button>
-                        </div>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="image-content">
-                            <span class="overlay"></span>
-                            <div class="card-image">
-                                <img src="images/profile6.jpg" alt="" class="card-img">
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">7</span>
+                            </li>
+                            <li>
+                                <a href="https://fontawesome.com/icons/person?f=classic&s=solid">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
                             </div>
                         </div>
-                        <div class="card-content">
-                            <h2 class="name">3</h2>
-                            <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="button">View More</button>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="image-content">
-                            <span class="overlay"></span>
-                            <div class="card-image">
-                                <img src="images/profile7.jpg" alt="" class="card-img">
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="#" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="#" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Innova</h2>
+                                </a>
+                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
-                        <div class="card-content">
-                            <h2 class="name">David Dell</h2>
-                            <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="button">View More</button>
-                        </div>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="image-content">
-                            <span class="overlay"></span>
-                            <div class="card-image">
-                                <img src="images/profile8.jpg" alt="" class="card-img">
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">7</span>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Available for rent</span>
                             </div>
                         </div>
-                        <div class="card-content">
-                            <h2 class="name">David Dell</h2>
-                            <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="button">View More</button>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="image-content">
-                            <span class="overlay"></span>
-                            <div class="card-image">
-                                <img src="images/profile9.jpg" alt="" class="card-img">
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="#" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="#" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Innova</h2>
+                                </a>
+                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
-                        <div class="card-content">
-                            <h2 class="name">David Dell</h2>
-                            <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="button">View More</button>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">7</span>
+                            </li>
+                            <li>
+                                <a href="#products-details.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="swiper-button-next swiper-navBtn"></div>
-            <div class="swiper-button-prev swiper-navBtn"></div>
-            <div class="swiper-pagination"></div>
-        </div>-->
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="#" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" alt="Nissan Sentra">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="#" class="car_model_link">
+                                    <h2 class="car_model" title="SENTRA">Altis</h2>
+                                </a>
+                                <p class="car_price">850฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_not_available">
+                                <span>No disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="#" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" alt="KIA Forte">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="#" class="car_model_link">
+                                    <h2 class="car_model" title="FORTE">Vios</h2>
+                                </a>
+                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+            </section>
+        </div>
     </section>
 
     <footer class="section-p1">
