--- a/Car.html
+++ b/Car.html
@@ -320,7 +320,7 @@
         <a href="">1</a>
         <a href="">2</a>
         <a href="">3</a>
-        <a href=""><i class="fal fa-long-arrow-alt-right"></i></a>
+        <a href=""><i class="fa-solid fa-ellipsis"></i></a>
     </section>
 
     <footer class="section-p1">
