--- a/Car.html
+++ b/Car.html
@@ -54,7 +54,7 @@
                         <div class="car_body_img_container">
                             <a href="product.html" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="Car-rental\TOYOTA-INNOVA.png" alt="Ford Focus">
+                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
                                 </figure>
                             </a>
                         </div>
