--- a/Car.html
+++ b/Car.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="product.html" class="car_img_content_link">
+                            <a href="#" class="car_img_content_link">
                                 <figure class="car_img_content">
                                     <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
                                 </figure>
@@ -61,7 +61,7 @@
                         <div>
                             <p class="car_name">Toyota</p>
                             <div class="car_price_container">
-                                <a href="product.html" class="car_model_link">
+                                <a href="#" class="car_model_link">
                                     <h2 class="car_model" title="FOCUS">Innova</h2>
                                 </a>
                                 <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
@@ -83,7 +83,7 @@
                                 <span title="5">7</span>
                             </li>
                             <li>
-                                <a href="product.html">
+                                <a href="#">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="#" class="car_img_content_link">
+                            <a href="product.html" class="car_img_content_link">
                                 <figure class="car_img_content">
                                     <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" alt="Ford Focus">
                                 </figure>
@@ -171,7 +171,7 @@
                         <div>
                             <p class="car_name">Toyota</p>
                             <div class="car_price_container">
-                                <a href="#" class="car_model_link">
+                                <a href="product.html" class="car_model_link">
                                     <h2 class="car_model" title="FOCUS">Innova</h2>
                                 </a>
                                 <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
@@ -193,7 +193,7 @@
                                 <span title="5">7</span>
                             </li>
                             <li>
-                                <a href="#products-details.html">
+                                <a href="product.html">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
