--- a/product.html
+++ b/product.html
@@ -29,19 +29,22 @@
     </section>
 
     <section id="prodetails" class="section-p1">
-        <div class="proimg">
+        <div class="single-proimg">
             <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="100%" id="MainImg" alt="">
+            <div class="small-img-group">
+                <div class="small-img-col">
+                    <img src="https://www.suzuki.co.th/upload/gallery/20201112_s_t8EbXQY6Tn.jpg" width="100%" class="small-img" alt="">
+                </div>
+                <div class="small-img-col">
+                    <img src="https://www.suzuki.co.th/upload/description/20230224_s_Gdv2SOGPG0.jpeg" width="200px" height="110px" class="small-img" alt="">
+                </div>
+                <div class="small-img-col">
+                    <img src="https://www.suzuki.co.th/upload/description/20230309_s_1I2RL7ae3K.jpeg" width="100%" class="small-img" alt="">
+                </div>
+            </div>
         </div>
-        <div class="small-img-group">
-            <div class="small-img-col">
-                <img src="https://www.suzuki.co.th/upload/gallery/20201112_s_t8EbXQY6Tn.jpg" width="100%" class="small-img" alt="">
-            </div>
-            <div class="small-img-col">
-                <img src="https://www.suzuki.co.th/upload/description/20230224_s_Gdv2SOGPG0.jpeg" width="100%" class="small-img" alt="">
-            </div>
-            <div class="small-img-col">
-                <img src="https://www.suzuki.co.th/upload/description/20230309_s_1I2RL7ae3K.jpeg" width="100%" class="small-img" alt="">
-            </div>
+        <div class="proimg">
+
         </div>
         <!--<div class="small-img-group">
             <div class="small-img-col">
