--- a/product.html
+++ b/product.html
@@ -43,8 +43,9 @@
                 </div>
             </div>
         </div>
-        <div class="proimg">
-
+        <div class="single-prodetails">
+            <h4></h4>
+            <p></p>
         </div>
         <!--<div class="small-img-group">
             <div class="small-img-col">
