--- a/calcurator.html
+++ b/calcurator.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="calcurator.css">
     <title>Simple Calculator</title>
 </head>
 <body>
     
+    <script src="calcurator.js"></script>
 </body>
 </html>
