--- a/calcurator.html
+++ b/calcurator.html
@@ -7,7 +7,12 @@
     <title>Simple Calculator</title>
 </head>
 <body>
-    
+    <section class="Calculator">
+        <form>
+            
+        </form>
+
+    </section>
     <script src="calcurator.js"></script>
 </body>
 </html>
