--- a/Calculator.html
+++ b/Calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="calcurator.css">
+    <link rel="stylesheet" href="Calculator.css">
     <title>Simple Calculator</title>
 </head>
 <body>
@@ -16,8 +16,20 @@
             <button type="button" class="btn btn-yellow" data-num="/">/</button>
             <button type="button" class="btn btn-yellow" data-num="+">+</button>
             <button type="button" class="btn btn-yellow" data-num="-">-</button>
+
+            <button type="button" class="btn btn-gray" data-num="9">9</button>
+            <button type="button" class="btn btn-gray" data-num="8">8</button>
+            <button type="button" class="btn btn-gray" data-num="7">7</button>
+            <button type="button" class="btn btn-gray" data-num="6">6</button>
+            <button type="button" class="btn btn-gray" data-num="5">5</button>
+            <button type="button" class="btn btn-gray" data-num="4">4</button>
+            <button type="button" class="btn btn-gray" data-num="3">3</button>
+            <button type="button" class="btn btn-gray" data-num="2">2</button>
+            <button type="button" class="btn btn-gray" data-num="1">1</button>
+            <button type="button" class="btn btn-gray" data-num="0">0</button>
+            <button type="button" class="btn btn-gray" data-num=".">.</button>
         </div>
     </section>
-    <script src="calcurator.js"></script>
+    <script src="Calculator.js"></script>
 </body>
 </html>
