--- a/Calculator.html
+++ b/Calculator.html
@@ -28,6 +28,9 @@
             <button type="button" class="btn btn-gray" data-num="1">1</button>
             <button type="button" class="btn btn-gray" data-num="0">0</button>
             <button type="button" class="btn btn-gray" data-num=".">.</button>
+
+            <button type="button" class="btn btn-green">=</button>
+            <button type="button" class="btn btn-red">c</button>
         </div>
     </section>
     <script src="Calculator.js"></script>
