--- a/Calculator.html
+++ b/Calculator.html
@@ -11,7 +11,7 @@
         <form>
             <input type="text" class="screen">
         </form>
-        <div>
+        <div class="buttons">
             <button type="button" class="btn btn-yellow" data-num="*">*</button>
             <button type="button" class="btn btn-yellow" data-num="/">/</button>
             <button type="button" class="btn btn-yellow" data-num="+">+</button>
