--- a/Calculator.html
+++ b/Calculator.html
@@ -29,8 +29,8 @@
             <button type="button" class="btn btn-gray" data-num="0">0</button>
             <button type="button" class="btn btn-gray" data-num=".">.</button>
 
-            <button type="button" class="btn btn-green">=</button>
-            <button type="button" class="btn btn-red">c</button>
+            <button type="button" class="btn btn-equal">=</button>
+            <button type="button" class="btn btn-clear">C</button>
         </div>
     </section>
     <script src="Calculator.js"></script>
