--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
         </div>
     </section>
 
-    <section class="container">
-        <h2>Frequently Asked Questions</h2>
+    <section id="FAQ" class="container">
+        <h2>คำถามที่พบบ่อย</h2>
         <div class="accordion">
             <div class="accordion-item">
                 <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Why is the moon sometimes out during the day?</span><span class="icon" aria-hidden="true"></span></button>
