--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
         <h2>คำถามที่พบบ่อย</h2>
         <div class="accordion">
             <div class="accordion-item">
-                <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Why is the moon sometimes out during the day?</span><span class="icon" aria-hidden="true"></span></button>
+                <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">มีบริการรับส่งไหม?</span><span class="icon" aria-hidden="true"></span></button>
                 <div class="accordion-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Why is the sky blue?</span><span class="icon" aria-hidden="true"></span></button>
+                <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">นำรถมาฝากไว้ได้ไหม?</span><span class="icon" aria-hidden="true"></span></button>
                 <div class="accordion-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, slabore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
                 </div>
             </div>
             <div class="accordion-item">
