--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@
             <div class="accordion-item">
                 <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">มีบริการรับส่งไหม?</span><span class="icon" aria-hidden="true"></span></button>
                 <div class="accordion-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                    <p>ทางร้านมีบริการส่งรับ โดยจะมีเงื่อนไขและค่าบริการตามระยะทาง</p>
                 </div>
             </div>
             <div class="accordion-item">
                 <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">นำรถมาฝากไว้ได้ไหม?</span><span class="icon" aria-hidden="true"></span></button>
                 <div class="accordion-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, slabore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                    <p>ผู้เช่าสามารถนำรถมาจอดไว้ภายในร้านได้</p>
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">Will we ever discover aliens?</span><span class="icon" aria-hidden="true"></span></button>
+                <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">ออกใบกำกับภาษีได้ไหม?</span><span class="icon" aria-hidden="true"></span></button>
                 <div class="accordion-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                    <p>ทางร้านไม่ได้จดบริษัท จึงไม่สามารถออกใบกำกับภาษาให้ได้</p>
                 </div>
             </div>
             <div class="accordion-item">
