--- a/index.html
+++ b/index.html
@@ -193,15 +193,9 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">How much does the Earth weigh?</span><span class="icon" aria-hidden="true"></span></button>
+                <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">ใช้เวลาในการเตรียมรถนานไหม?</span><span class="icon" aria-hidden="true"></span></button>
                 <div class="accordion-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">How do airplanes stay up?</span><span class="icon" aria-hidden="true"></span></button>
-                <div class="accordion-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                    <p>ทางร้านจะเตรียมรถหลังจากผู้เช่าโอนจองแล้วเท่านั้น โดยจะใช้เวลาในการเตรียมรถประมาณ 1-2 ชม.</p>
                 </div>
             </div>
         </div>
