--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h4>กำลังมองหารถเช่าอยู่ใช่ไหม</h4>
         <h2>รถเช่ามหาชัยมีคำตอบ</h2>
         <p>เลือกก่อน จองก่อน ได้รถก่อน</p>
-        <button>
+        <button href="product.html">
             <span>เลือกรถตอนนี้</span>
             <svg width="34" height="34" viewBox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="37" cy="37" r="35.5" stroke="black" stroke-width="3"></circle>
