--- a/index.html
+++ b/index.html
@@ -164,12 +164,16 @@
         <div class="banner-box b1">
             <h2>ใช้เอกสารอะไรบ้าง</h2>
             <span>คลิก "อ่านรายละเอียด" เพื่อเรียนรู้เอกสาร<br>ที่จำเป็นสำหรับดำเนินการเช่า</span>
-            <button class="white">อ่านรายละเอียด</button>
+            <a href="Deal.html">
+                <button class="white">อ่านรายละเอียด</button>
+            </a>
         </div>
         <div class="banner-box b2">
             <h2>วิธีดำเนินการเช่า</h2>
             <span>หากคุณไม่เคยเช่ามาก่อน สามารถคลิก "อ่านรายละเอียด"</span>
-            <button class="white">อ่านรายละเอียด</button>
+            <a href="Deal.html">
+                <button class="white">อ่านรายละเอียด</button>
+            </a>
         </div>
     </section>
 
@@ -189,7 +193,7 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">ออกใบกำกับภาษีได้ไหม?</span><span class="icon" aria-hidden="true"></span></button>
+                <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">ออกใบกำกับภาษีได้ไหม?</span></span></button>
                 <div class="accordion-content">
                     <p>ทางร้านไม่ได้จดบริษัท จึงไม่สามารถออกใบกำกับภาษาให้ได้</p>
                 </div>
