--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
         <h2>คำถามที่พบบ่อย</h2>
         <div class="accordion">
             <div class="accordion-item">
-                <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">มีบริการรับส่งไหม?</span><span class="icon" aria-hidden="true"></span></button>
+                <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">มีบริการรับส่งไหม?</span></button>
                 <div class="accordion-content">
                     <p>ทางร้านมีบริการส่งรับ โดยจะมีเงื่อนไขและค่าบริการตามระยะทาง</p>
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">นำรถมาฝากไว้ได้ไหม?</span><span class="icon" aria-hidden="true"></span></button>
+                <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">นำรถมาฝากไว้ได้ไหม?</span><!--<span class="icon" aria-hidden="true">--></span></button>
                 <div class="accordion-content">
                     <p>ผู้เช่าสามารถนำรถมาจอดไว้ภายในร้านได้</p>
                 </div>
@@ -199,7 +199,7 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">ใช้เวลาในการเตรียมรถนานไหม?</span><span class="icon" aria-hidden="true"></span></button>
+                <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">ใช้เวลาในการเตรียมรถนานไหม?</span></button>
                 <div class="accordion-content">
                     <p>ทางร้านจะเตรียมรถหลังจากผู้เช่าโอนจองแล้วเท่านั้น โดยจะใช้เวลาในการเตรียมรถประมาณ 1-2 ชม.</p>
                 </div>
