--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="follow">
                 <h4>ติดตามเรา</h4>
                 <div class="icon">
-                    <i class="fab fa-facebook"><a href="Deal.html"></a></i>
+                    <a href="Deal.html"><i class="fab fa-facebook"></i></a>
                     <i class="fab fa-line"></i>
                 </div>
             </div>
