--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <h4>ติดตามเรา</h4>
                 <div class="icon">
                     <a href="Deal.html"><i class="fab fa-facebook"></i></a>
-                    <i class="fab fa-line"></i>
+                    <a href="Deal.html"><i class="fab fa-line"></i></a>
                 </div>
             </div>
         </div>
