--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="follow">
                 <h4>ติดตามเรา</h4>
                 <div class="icon">
-                    <a href="Deal.html"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100089833762334"><i class="fab fa-facebook"></i></a>
                     <a href="Deal.html"><i class="fab fa-line"></i></a>
                 </div>
             </div>
