--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <section id="product1" class="section-p1">
         <h2>Hit cars</h2>
-        <!--<div class="slide-container swiper">
+        <div class="slide-container swiper">
             <div class="slide-content">
                 <div class="card-wrapper swiper-wrapper">
                     <div class="card swiper-slide">
@@ -157,7 +157,7 @@
             <div class="swiper-button-next swiper-navBtn"></div>
             <div class="swiper-button-prev swiper-navBtn"></div>
             <div class="swiper-pagination"></div>
-        </div>-->
+        </div>
     </section>
 
     <section id="sm-banner" class="section-p1">
