--- a/index.html
+++ b/index.html
@@ -83,14 +83,16 @@
                             </svg>
                         </div>
                         <div class="title">
-                            <span>New brand name</span>
+                            <span>Toyota Innova</span>
                         </div>
                         <div class="size">
+                            <span>Size</span>
+                            <span>Size</span>
                             <span>Size</span>
                         </div>
                         <div class="action">
                             <div class="price">
-                                <span>$299</span>
+                                <p class="car_price">850฿ <span class="car_price_time">/day</span></p>
                             </div>
                             <button class="cart-button">
                                 <svg
