--- a/index.html
+++ b/index.html
@@ -98,11 +98,7 @@
                                 <ul class="car_list_characteristics">
                                     <li>
                                         <i class="fa-solid fa-gears"></i>
-                                        <span title="Manual">automatic</span><br>
-                                        <i class="fa-solid fa-gas-pump"></i>
-                                        <span title="Kilometraje ilimitado">Gasohal 95</span><br>
-                                        <i class="fas fa-user"></i>
-                                        <span title="5">7</span>
+                                        <span title="Manual">automatic</span>
                                     </li>
                                     <li>
                                         <i class="fa-solid fa-gas-pump"></i>
