--- a/index.html
+++ b/index.html
@@ -118,6 +118,264 @@
                                 </ul>
                             </div>
                         </article>
+                        <article class="card_ui">
+                            <div class="car_body">
+                                <div class="car_body_img_container">
+                                    <a href="#" class="car_img_content_link">
+                                        <figure class="car_img_content">
+                                            <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div>
+                                    <p class="car_name">Toyota</p>
+                                    <div class="car_price_container">
+                                        <a href="#" class="car_model_link">
+                                            <h2 class="car_model" title="FOCUS">Innova</h2>
+                                        </a>
+                                        <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="car_footer">
+                                <ul class="car_list_characteristics">
+                                    <li>
+                                        <i class="fa-solid fa-gears"></i>
+                                        <span title="Manual">automatic</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-gas-pump"></i>
+                                        <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-user"></i>
+                                        <span title="5">7</span>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <button class="rentbtn">
+                                                <p class="text">Go to book</p>
+                                            </button>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </article>
+                        <article class="card_ui">
+                            <div class="car_body">
+                                <div class="car_body_img_container">
+                                    <a href="#" class="car_img_content_link">
+                                        <figure class="car_img_content">
+                                            <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div>
+                                    <p class="car_name">Toyota</p>
+                                    <div class="car_price_container">
+                                        <a href="#" class="car_model_link">
+                                            <h2 class="car_model" title="FOCUS">Innova</h2>
+                                        </a>
+                                        <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="car_footer">
+                                <ul class="car_list_characteristics">
+                                    <li>
+                                        <i class="fa-solid fa-gears"></i>
+                                        <span title="Manual">automatic</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-gas-pump"></i>
+                                        <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-user"></i>
+                                        <span title="5">7</span>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <button class="rentbtn">
+                                                <p class="text">Go to book</p>
+                                            </button>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </article>
+                        <article class="card_ui">
+                            <div class="car_body">
+                                <div class="car_body_img_container">
+                                    <a href="#" class="car_img_content_link">
+                                        <figure class="car_img_content">
+                                            <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div>
+                                    <p class="car_name">Toyota</p>
+                                    <div class="car_price_container">
+                                        <a href="#" class="car_model_link">
+                                            <h2 class="car_model" title="FOCUS">Innova</h2>
+                                        </a>
+                                        <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="car_footer">
+                                <ul class="car_list_characteristics">
+                                    <li>
+                                        <i class="fa-solid fa-gears"></i>
+                                        <span title="Manual">automatic</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-gas-pump"></i>
+                                        <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-user"></i>
+                                        <span title="5">7</span>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <button class="rentbtn">
+                                                <p class="text">Go to book</p>
+                                            </button>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </article>
+                        <article class="card_ui">
+                            <div class="car_body">
+                                <div class="car_body_img_container">
+                                    <a href="#" class="car_img_content_link">
+                                        <figure class="car_img_content">
+                                            <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div>
+                                    <p class="car_name">Toyota</p>
+                                    <div class="car_price_container">
+                                        <a href="#" class="car_model_link">
+                                            <h2 class="car_model" title="FOCUS">Innova</h2>
+                                        </a>
+                                        <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="car_footer">
+                                <ul class="car_list_characteristics">
+                                    <li>
+                                        <i class="fa-solid fa-gears"></i>
+                                        <span title="Manual">automatic</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-gas-pump"></i>
+                                        <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-user"></i>
+                                        <span title="5">7</span>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <button class="rentbtn">
+                                                <p class="text">Go to book</p>
+                                            </button>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </article>
+                        <article class="card_ui">
+                            <div class="car_body">
+                                <div class="car_body_img_container">
+                                    <a href="#" class="car_img_content_link">
+                                        <figure class="car_img_content">
+                                            <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div>
+                                    <p class="car_name">Toyota</p>
+                                    <div class="car_price_container">
+                                        <a href="#" class="car_model_link">
+                                            <h2 class="car_model" title="FOCUS">Innova</h2>
+                                        </a>
+                                        <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="car_footer">
+                                <ul class="car_list_characteristics">
+                                    <li>
+                                        <i class="fa-solid fa-gears"></i>
+                                        <span title="Manual">automatic</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-gas-pump"></i>
+                                        <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-user"></i>
+                                        <span title="5">7</span>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <button class="rentbtn">
+                                                <p class="text">Go to book</p>
+                                            </button>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </article>
+                        <article class="card_ui">
+                            <div class="car_body">
+                                <div class="car_body_img_container">
+                                    <a href="#" class="car_img_content_link">
+                                        <figure class="car_img_content">
+                                            <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div>
+                                    <p class="car_name">Toyota</p>
+                                    <div class="car_price_container">
+                                        <a href="#" class="car_model_link">
+                                            <h2 class="car_model" title="FOCUS">Innova</h2>
+                                        </a>
+                                        <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="car_footer">
+                                <ul class="car_list_characteristics">
+                                    <li>
+                                        <i class="fa-solid fa-gears"></i>
+                                        <span title="Manual">automatic</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-gas-pump"></i>
+                                        <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-user"></i>
+                                        <span title="5">7</span>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <button class="rentbtn">
+                                                <p class="text">Go to book</p>
+                                            </button>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </article>
                     </section>
                 </div>
             </div>
