--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section id="product1" class="section-p1">
-        <h2>Hit cars</h2>
+        <h2 class="Hit">Hit cars</h2>
         <div class="slider">
             <div class="slide-track">
                 <div class="container">
