--- a/Car.html
+++ b/Car.html
@@ -317,10 +317,10 @@
     </section>
 
     <section id="pagination" class="section-p1">
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
-        <a href=""><i class="fa-solid fa-ellipsis"></i></a>
+        <a href="Car.html">1</a>
+        <a href="Car.html">2</a>
+        <a href="Car.html">3</a>
+        <a href="Car.html"><i class="fa-solid fa-ellipsis"></i></a>
     </section>
 
     <footer class="section-p1">
